add example simon

--- a/games/simon/index.html
+++ b/games/simon/index.html
@@ -2,9 +2,9 @@
 <html lang="zh-cn"> 
 <head> 
     <meta charset="UTF-8" />
-    <title>Matching</title>
+    <title>Simon</title>
     <script src="../../phaser.min.js"></script>
-    <script src="matching.js"></script>
+    <script src="simon.js"></script>
 </head>
 <body>
 
